--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "python2": "0.0.1",
     "quick.db": "^7.1.1",
     "random-puppy": "^1.1.0",
+    "randomstring": "^1.1.5",
     "redis": "^3.0.2",
     "seedrandom": "^3.0.5",
     "simple-youtube-api": "^5.2.1",
